Innfører journalpostId for institusjonsvurderinger + mye refaktorering